修复BASE64Encoder因jdk11找不到问题