@@ -7,6 +7,7 @@ import sun.misc.BASE64Decoder;
 import sun.misc.BASE64Encoder;
 
 import java.io.IOException;
+import java.util.Base64;
 
 public class DesUtils {
     /**
@@ -17,11 +18,7 @@ public class DesUtils {
      */
     public static String encrypt(String info, String secretKey) {
         byte[] key = new byte[0];
-        try {
-            key = new BASE64Decoder().decodeBuffer(secretKey);
-        } catch (IOException ioException) {
-            ioException.printStackTrace();
-        }
+        key = Base64.getDecoder().decode(secretKey);
         DES des = SecureUtil.des(key);
         String encrypt = des.encryptHex(info);
         return encrypt;
@@ -34,7 +31,7 @@ public class DesUtils {
      * @return
      */
     public static String decode(String encrypt, String secretKey) throws IOException {
-        byte[] key = new BASE64Decoder().decodeBuffer(secretKey);
+        byte[] key = Base64.getDecoder().decode(secretKey);
         DES des = SecureUtil.des(key);
         return des.decryptStr(encrypt);
     }
@@ -42,7 +39,7 @@ public class DesUtils {
     public static void main(String[] args) throws IOException {
         //生成密钥，并转为字符串，可以储存起来，解密时可直接使用
         byte[] key = SecureUtil.generateKey(SymmetricAlgorithm.DES.getValue()).getEncoded();
-        String secretKey = new BASE64Encoder().encodeBuffer(key);
+        String secretKey = Base64.getEncoder().encodeToString(key);
         System.out.println(secretKey);
         String admin = DesUtils.encrypt("20221021009", secretKey);
         System.out.println("加密后="+admin);
